# recx

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: api.md  changelog.md  getting-started.md  index.md  usage.md
src/recx/: __init__.py  checks.py  exceptions.py  rec.py  results.py
tests/: conftest.py  test_recx.py
tests/fixtures/: frames.py
tests/integration/: test_rec.py
tests/unit/: test_checks.py  test_edge_cases.py  test_error_paths.py  test_index_checks.py  test_utils.py
