# =============================================================================
# Project Configuration
# =============================================================================

[project]
name = "recx"
version = "0.0.0"
description = "Lightweight reconciliation tests for DataFrames"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Adrian Letchford", email = "me@dradrian.com" }
]

dependencies = [
    "pandas>=2.3.2",
]

[project.urls]
Homepage = "https://github.com/robolyst/recx"
# Documentation = "https://yourproject.example.com/docs"  # No docs yet
Source = "https://github.com/robolyst/recx"
Issues = "https://github.com/robolyst/recx/issues"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff>=0.12.10",
    "twine>=6.1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

# =============================================================================
# Linting
# =============================================================================

[tool.ruff]
exclude = [
    "notebooks",
    ".devcontainer",
    # These are files that try to match the code to the mathematics
    # which means we get lots of variables of a single letter that
    # ruff doesn't like.
    "src/lib/optimise/fxte.py",
]

[tool.ruff.lint]
# Full list of rules here: https://docs.astral.sh/ruff/rules/
select = [
    # Core rules
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "UP",    # pyupgrade
    "I",     # isort
    
    # Quality and style
    "B",     # flake8-bugbear
    "Q",     # flake8-quotes
    "SIM",   # flake8-simplify
    "FLY",   # flynt
    "PERF",  # Perflint
    
    # Disabled rules (uncomment to enable):
    # "AIR",   # Airflow
    # "ERA",   # eradicate
    # "FAST",  # FastAPI
    # "YTT",   # flake8-2020
    # "ANN",   # flake8-annotations
    # "ASYNC", # flake8-async
    # "S",     # flake8-bandit - Raises for "asserts" including in tests
    # "BLE",   # flake8-blind-except
    # "FBT",   # flake8-boolean-trap
    # "A",     # flake8-builtins
    # "COM",   # flake8-commas - Too pedantic
    # "C4",    # flake8-comprehensions
    # "CPY",   # flake8-copyright
    # "DTZ",   # flake8-datetimez
    # "T10",   # flake8-debugger
    # "DJ",    # flake8-django
    # "EM",    # flake8-errmsg
    # "EXE",   # flake8-executable
    # "FIX",   # flake8-fixme
    # "FA",    # flake8-future-annotations
    # "INT",   # flake8-gettext
    # "ISC",   # flake8-implicit-str-concat
    # "ICN",   # flake8-import-conventions
    # "LOG",   # flake8-logging
    # "G",     # flake8-logging-format
    # "INP",   # flake8-no-pep420
    # "PIE",   # flake8-pie
    # "T20",   # flake8-print
    # "PYI",   # flake8-pyi
    # "PT",    # flake8-pytest-style
    # "RSE",   # flake8-raise
    # "RET",   # flake8-return
    # "SLF",   # flake8-self
    # "SLOT",  # flake8-slots
    # "TID",   # flake8-tidy-imports
    # "TD",    # flake8-todos
    # "TC",    # flake8-type-checking
    # "ARG",   # flake8-unused-arguments
    # "PTH",   # flake8-use-pathlib
    # "C90",   # mccabe
    # "NPY",   # NumPy-specific rules
    # "PD",    # pandas-vet
    # "N",     # pep8-naming
    # "DOC",   # pydoclint
    # "D",     # pydocstyle
    # "PGH",   # pygrep-hooks
    # "PL",    # Pylint
    # "PLC",   # Convention
    # "PLE",   # Error
    # "PLR",   # Refactor
    # "PLW",   # Warning
    # "FURB",  # refurb
    # "RUF",   # Ruff-specific rules
    # "TRY",   # tryceratops
]

# =============================================================================
# Static Type Checking
# =============================================================================

[tool.pyright]
include = ["src"]

# =============================================================================
# Testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]


# =============================================================================
# Task Runner Configuration
# =============================================================================

[tool.poe.tasks]

# Testing
test.cmd = """
pytest ./tests
       --color=yes
       --cov=src
       --no-cov-on-fail
       --cov-fail-under=95
       --cov-report term-missing:skip-covered
       --ignore=analytics
"""
test.help = "Run the test suite with coverage"

# Code Quality
check.shell = "ruff check && pyright"
check.help = "Run linting checks"

fix.shell = "ruff check --fix && ruff format"
fix.help = "Auto fix linting and formatting issues"

# Documentation
docs-serve.shell = "mkdocs serve -a 0.0.0.0:8000"
docs-serve.help = "Serve documentation with live reload"

docs-build.shell = "mkdocs build --strict"
docs-build.help = "Build the documentation site"
